--- a/proyecto1/src/app/modules/shared/component/navbar/navbar.component.html
+++ b/proyecto1/src/app/modules/shared/component/navbar/navbar.component.html
@@ -19,7 +19,7 @@
 
 
   <!--inicio de sesion y formulario de registro-->
-  <button mat-button [matMenuTriggerFor]="usuario"><mat-icon>person</mat-icon></button>
+  <button mat-icon-button [matMenuTriggerFor]="usuario"><mat-icon>person</mat-icon></button>
   <mat-menu #usuario="matMenu">
     <button mat-menu-item routerLink="/registro">Registro</button>
     <button mat-menu-item routerLink="/inicio-sesion">Iniciar sesion</button>
