filtro de productos terminado; módulo producto con sus categorias dividido por diferentes cards y colecciones de lectura

--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -141,7 +141,7 @@
                     <label class="form-label">Seleccione una categoría:</label>
                     <select class="form-control form-select" formControlName="categoria">
                         <option selected>Elija una opción</option>
-                        <option value="apartado-1">Souvenirs</option>
+                        <option value="apartado-1">Souvenirs</option> <!--de aca selecciono los apartados-->
                         <option value="apartado-2">Indumentaria</option>
                         <option value="apartado-3">Gastronomia</option>
                     </select>
