--- a/src/app/modules/shared/component/navbar/navbar.component.html
+++ b/src/app/modules/shared/component/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 
   <button mat-button routerLink="/inicio">Inicio</button>
 
-  <button mat-button [matMenuTriggerFor]="producto">Menu</button>
+  <button mat-button [matMenuTriggerFor]="producto">Productos</button>
   <mat-menu #producto="matMenu">
     <button mat-menu-item routerLink="general">General</button>
     <button mat-menu-item routerLink="Apartado1">Souvenirs</button>
