--- a/src/app/modules/producto/components/card-souvenirs/card-souvenirs.component.html
+++ b/src/app/modules/producto/components/card-souvenirs/card-souvenirs.component.html
@@ -1,1 +1,18 @@
-<p>card-souvenirs works!</p>
+<!--card para mostrar todos los productos que se hayan ingresado-->
+<div class="row">
+    <div class="col" *ngFor="let producto of coleccionSouvenirs">
+        <div class="card" style="width: 18rem;">
+            <img src="{{producto.imagen}}" class="card-img-top" alt="producto.alt">
+
+            <div class="card-body">
+                <h5 class="card-title">{{producto.nombre}}</h5>
+                <p class="card-text">{{producto.precio}}</p>
+
+                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalCardSouvenirs"
+                    (click)="mostrarVer(producto)">
+                    Ver más
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
