--- a/src/app/modules/shared/component/navbar/navbar.component.html
+++ b/src/app/modules/shared/component/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
   <button mat-button [matMenuTriggerFor]="producto">Productos</button>
   <mat-menu #producto="matMenu">
-    <button mat-menu-item routerLink="general">General</button>
+    <button mat-menu-item routerLink="General">General</button>
     <button mat-menu-item routerLink="Apartado1">Souvenirs</button>
     <button mat-menu-item routerLink="Apartado2">Indumentaria</button>
     <button mat-menu-item routerLink="Apartado3">Gastronomia</button>
