--- a/src/app/modules/producto/components/card/card.component.html
+++ b/src/app/modules/producto/components/card/card.component.html
@@ -1,8 +1,23 @@
-<!--card para mostrar todos los productos que se hayan ingresado-->
+<div class="row">
+    <div class="col-lg-12" *ngIf="compraVisible">
+        <div class="col-lg-4">
+            <div class="card text-bg-info mb-3">
+                <ul class="list-group">
+                    <h3>Ultima Compra:</h3>
+                    <li class="list-group-item">
+                        {{productoReciente}}
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Card para mostrar TODOS los productos que se hayan ingresado -->
 <div class="row">
     <div class="col" *ngFor="let producto of coleccionProductos">
         <div class="card" style="width: 18rem;">
-            <img src="{{producto.imagen}}" class="card-img-top" alt="producto.alt">
+            <img src="{{producto.imagen}}" class="card-img-top" alt="{{producto.alt}}">
 
             <div class="card-body">
                 <h5 class="card-title">{{producto.nombre}}</h5>
@@ -17,11 +32,11 @@
     </div>
 </div>
 
-<!--Modal para ver más Informacion-->
-<div class="modal fade" id="modalCard" *ngIf="modalVisible" tabindex="-1" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<!-- Modal para ver más información -->
+<div class="modal fade" id="modalCard" *ngIf="modalVisible" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
+
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">{{productoSeleccionado.nombre}}</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -34,15 +49,13 @@
                     {{productoSeleccionado.descripcion}}
                 </div>
 
-                <div class="mb3">
+                <div class="mb-3">
                     {{productoSeleccionado.precio}}
                 </div>
             </div>
 
-
-
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Agregar al Carrito</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="agregarProducto(productoSeleccionado)">Agregar</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
