vinculamos storage a la aplicación | modificamos método 'crearProducto' y 'eliminarProducto'; creamos métodos 'obtenerUrlImagen' y 'subirImagen' en crudService | modificamos función 'agregarProducto' en table.ts ---- Vinculación con storage completada; métodos modificados en 'table.ts' e inputs en 'table.html' | CRUD finalizado

--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -87,8 +87,16 @@
 
                 <div class="mb-3">
                     <label class="form-label">Ingrese una imagen:</label>
-                    <input class="form-control" type="text" formControlName="imagen"
-                        placeholder="Ingrese vínculo de una imagen">
+                    <!-- <input class="form-control" type="text" formControlName="imagen"
+                        placeholder="Ingrese vínculo de una imagen"> -->
+                    
+                    <!--
+                        type="file" -> recibe archivos
+                        accept="imagen/*" -> acepte todo tipo de extensiones (jpg, png, pdf, doc, gif)
+                        (change)="cargarImagen($event)" -> ejecuta el evento de cargarImagen que definimos 
+                        en la lógica del componente
+                    -->
+                    <input type="file" accept="imagen/*" (change)="cargarImagen($event)">
                 </div>
 
                 <div class="mb-3">
@@ -149,8 +157,9 @@
 
                 <div class="mb-3">
                     <label class="form-label">Ingrese una imagen:</label>
-                    <input class="form-control" type="text" formControlName="imagen"
-                        placeholder="Ingrese vínculo de una imagen">
+                    <!-- <input class="form-control" type="text" formControlName="imagen"
+                        placeholder="{{productoEdit.imagen}}"> -->
+                        <input type="file" accept="imagen/*" (change)="cargarImagen($event)">
                 </div>
 
                 <div class="mb-3">
@@ -171,7 +180,7 @@
 </div>
 
 <!-- MODAL PARA ELIMINAR PRODUCTO -->
-<div class="modal fade" *ngIf="modalVisibleproducto" id="eliminarProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" *ngIf="modalVisibleProducto" id="eliminarProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
     <div class="modal-content">
         <!-- ENCABEZADO -->
